namespaces/bankofanthos/contacts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contacts
spec:
  selector:
    matchLabels:
      app: contacts
  template:
    metadata:
      labels:
        app: contacts
    spec:
      serviceAccountName: bank-ksa
      terminationGracePeriodSeconds: 5
      containers:
      - name: contacts
        image: us-east4-docker.pkg.dev/mygke-756/containers/bank-of-anthos/contacts:v0.4.1
        volumeMounts:
        - name: publickey
          mountPath: "/root/.ssh"
          readOnly: true
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 500m
            memory: 256Mi
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 10
      volumes:
      - name: publickey
        secret:
          secretName: jwt-key
          items:
          - key: jwtRS256.key.pub
            path: publickey
---
apiVersion: v1
kind: Service
metadata:
  name: contacts
spec:
  type: ClusterIP
  selector:
    app: contacts
  ports:
  - name: http
    port: 8080
    targetPort: 8080
