namespaces/bankofanthos/ledger-writer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ledgerwriter
spec:
  selector:
    matchLabels:
      app: ledgerwriter
  template:
    metadata:
      labels:
        app: ledgerwriter
    spec:
      serviceAccountName: bank-ksa
      terminationGracePeriodSeconds: 5
      containers:
      - name: ledgerwriter
        image: us-east4-docker.pkg.dev/mygke-955/containers/bank-of-anthos/ledgerwriter:v0.4.1
        volumeMounts:
        - name: publickey
          mountPath: "/root/.ssh"
          readOnly: true
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 1Gi
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 5
          timeoutSeconds: 10
      volumes:
      - name: publickey
        secret:
          secretName: jwt-key
          items:
          - key: jwtRS256.key.pub
            path: publickey
---
apiVersion: v1
kind: Service
metadata:
  name: ledgerwriter
spec:
  type: ClusterIP
  selector:
    app: ledgerwriter
  ports:
  - name: http
    port: 8080
    targetPort: 8080
