namespaces/bankofanthos/accounts-db.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: accounts-db
  labels:
    app: accounts-db
    tier: db
spec:
  serviceName: "accounts-db"
  replicas: 1
  selector:
    matchLabels:
      app: accounts-db
      tier: db
  template:
    metadata:
      labels:
        app: accounts-db
        tier: db
    spec:
      serviceAccountName: accounts-db
      containers:
      - name: accounts-db
        image: us-east4-docker.pkg.dev/mygke-200/containers/bank-of-anthos/accounts-db:v0.5.0
        ports:
          - containerPort: 5432
            name: postgredb
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 1Gi
        volumeMounts:
        - name: postgresdb
          mountPath: /var/lib/postgresql/data
          subPath: postgres
      volumes:
      - name: postgresdb
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: accounts-db
  labels:
    app: accounts-db
    tier: db
spec:
  ports:
    - port: 5432
      name: tcp
      targetPort: 5432
      protocol: TCP
  selector:
    app: accounts-db
    tier: db
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: accounts-db
spec:
  selector:
    matchLabels:
      app: accounts-db
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/bankofanthos/sa/contacts", "cluster.local/ns/bankofanthos/sa/userservice"]
    to:
      - operation:
          ports: ["5432"]
