namespaces/bankofanthos/transaction-history.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transactionhistory
spec:
  selector:
    matchLabels:
      app: transactionhistory
  template:
    metadata:
      labels:
        app: transactionhistory
    spec:
      serviceAccountName: transactionhistory
      terminationGracePeriodSeconds: 5
      containers:
      - name: transactionhistory
        image: us-east4-docker.pkg.dev/mygke-200/containers/bank-of-anthos/transactionhistory:v0.5.0
        volumeMounts:
        - name: publickey
          mountPath: "/root/.ssh"
          readOnly: true
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 1Gi
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 5
          timeoutSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthy
            port: 8080
          initialDelaySeconds: 120
          periodSeconds: 5
          timeoutSeconds: 10
      volumes:
      - name: publickey
        secret:
          secretName: jwt-key
          items:
          - key: jwtRS256.key.pub
            path: publickey
---
apiVersion: v1
kind: Service
metadata:
  name: transactionhistory
spec:
  type: ClusterIP
  selector:
    app: transactionhistory
  ports:
  - name: http
    port: 8080
    targetPort: 8080
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: transactionhistory
spec:
  selector:
    matchLabels:
      app: transactionhistory
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/bankofanthos/sa/frontend"]
    to:
      - operation:
          paths: ["/transactions/*"]
          methods: ["GET"]
          ports: ["8080"]
